; ModuleID = '/home/carl/AnghaBench/tengine/src/http/modules/extr_ngx_http_fastcgi_module.c_ngx_http_fastcgi_lowat_check.c'
source_filename = "/home/carl/AnghaBench/tengine/src/http/modules/extr_ngx_http_fastcgi_module.c_ngx_http_fastcgi_lowat_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_LOG_WARN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"\22fastcgi_send_lowat\22 is not supported, ignored\00", align 1
@NGX_CONF_OK = common dso_local global i8* null, align 8
@NGX_CONF_ERROR = common dso_local global i8* null, align 8
@NGX_LOG_EMERG = common dso_local global i32 0, align 4
@ngx_freebsd_net_inet_tcp_sendspace = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i8*)* @ngx_http_fastcgi_lowat_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_http_fastcgi_lowat_check(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to i64*
  store i64* %9, i64** %7, align 8
  %10 = load i32, i32* @NGX_LOG_WARN, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 (i32, i32*, i32, i8*, ...) @ngx_conf_log_error(i32 %10, i32* %11, i32 0, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %13 = load i64*, i64** %7, align 8
  store i64 0, i64* %13, align 8
  %14 = load i8*, i8** @NGX_CONF_OK, align 8
  ret i8* %14
}

declare dso_local i32 @ngx_conf_log_error(i32, i32*, i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
